--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+*.firebase_options.*
+
+/ios/Runner/GoogleService-Info.plist
 
 # Flutter/Dart/Pub related
 **/doc/api/
