--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBvh7gD-hi_V46QiDUOVF8oxIM_hDL0HWc</string>
+	<string>API_KEY</string>
 	<key>GCM_SENDER_ID</key>
 	<string>501968836373</string>
 	<key>PLIST_VERSION</key>
